[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumprofit-bot"
version = "0.1.0"
description = "Quantum-inspired crypto trading system (BTC/USDT, XRP/USDT)."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
